--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <p>LinkedIn</p>
           <a class="button" href="https://www.linkedin.com/in/nadjan-santos-florencio-b87453138/" target="_blank">Visitar</a>
           <p>Currículo</p>
-      <a class="button" href="C:\Users\nda-p\OneDrive\Área de Trabalho\portifolio\Curriculo_Nadjan_Santos_Florencio.pdf" target="_blank">Baixar PDF</a>
+      <a class="button" href="Curriculo_Nadjan_Santos_Florencio.pdf" target="_blank">Baixar PDF</a>
         </article>
       </div>
     </section>
